# backup

./: CMakeLists.txt  README.md  backup.cpp  backup.h  common.h  jcr.cpp  jcr.h  runscript.cpp
diff/: README.md  diff.c  diff.h  lorem_1.txt  lorem_2.txt
lib/: alist.cpp  alist.h  bfile.cpp  bfile.h  sha1.c  sha1.h
script/: data.sql  export.sh  restore.sh  sed.sh  sql_full.sh
sql/: dbs.cpp  dbs.h
